--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,17 @@
 page-home {
+.bg{
+    background-image: url('../assets/imgs/images.png');
+    background-size: cover;
+    margin-top: 50px;
+}
+    
+    justify-content: center;
+    text-align: center;
+    .button{
+        font-size: 24px;
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+        margin-top: 80px;
+    }
+
 
 }
